--- a/package.json
+++ b/package.json
@@ -15,17 +15,26 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
-    "better-auth": "^1.4.0",
+    "@types/nodemailer": "^7.0.4",
+    "@types/qrcode": "^1.5.6",
+    "@types/react-google-recaptcha": "^2.1.9",
+    "@types/zxcvbn": "^4.4.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
+    "nodemailer": "^7.0.11",
+    "otplib": "^12.0.1",
+    "pg": "^8.16.3",
     "postgres": "^3.4.7",
+    "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tailwind-merge": "^3.4.0"
+    "react-google-recaptcha": "^3.1.0",
+    "tailwind-merge": "^3.4.0",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
